completed slides with some revisions

--- a/references.bib
+++ b/references.bib
@@ -26,7 +26,7 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2013},
-    url = {http://www.R-project.org/},
+    url = {http://www.R-project.org/}
   }
   
 @Book{ggplot2,
@@ -35,7 +35,7 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     publisher = {Springer New York},
     year = {2009},
     isbn = {978-0-387-98140-6},
-    url = {http://had.co.nz/ggplot2/book},
+    url = {http://had.co.nz/ggplot2/book}
   }
 
 @Manual{maps,
@@ -43,7 +43,7 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     author = {Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka $<$tpminka@media.mit.edu$>$},
     year = {2013},
     note = {R package version 2.3-6},
-    url = {http://CRAN.R-project.org/package=maps},
+    url = {http://CRAN.R-project.org/package=maps}
   }
 
 @Manual{maptools,
@@ -51,7 +51,7 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     author = {Roger Bivand and Nicholas Lewin-Koh},
     year = {2013},
     note = {R package version 0.8-27},
-    url = {http://CRAN.R-project.org/package=maptools},
+    url = {http://CRAN.R-project.org/package=maptools}
   }
 
 @Article{plyr,
@@ -62,7 +62,7 @@ URL = {http://vita.had.co.nz/papers/tidy-data.pdf}
     volume = {40},
     number = {1},
     pages = {1--29},
-    url = {http://www.jstatsoft.org/v40/i01/},
+    url = {http://www.jstatsoft.org/v40/i01/}
   }
 
   @Manual{acs,
@@ -71,7 +71,7 @@ American Community Survey},
     author = {Ezra Haber Glenn},
     year = {2014},
     note = {R package version 1.2},
-    url = {http://CRAN.R-project.org/package=acs},
+    url = {http://CRAN.R-project.org/package=acs}
   }
 
   @Manual{ggmap,
@@ -80,5 +80,12 @@ OpenStreetMap},
     author = {David Kahle and Hadley Wickham},
     year = {2013},
     note = {R package version 2.3},
-    url = {http://CRAN.R-project.org/package=ggmap},
+    url = {http://CRAN.R-project.org/package=ggmap}
+  }
+
+  @Articlel{edu1,
+    title = {Guidelines for Assessment and Instruction in Statistics Education: College Report},
+    author = {Aliaga, Cobb, Cuff, Garfield, Gould, Lock, Moor, Rossman, Stephenson, Utts, Velleman, Witmer},
+    year = {2013},
+    url = {http://www.amstat.org/education/gaise/GaiseCollege_Full.pdf}
   }
